--- a/scss/style.css
+++ b/scss/style.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap");
-.mision-caja-chica, section, main, .index-caja-chica, .adoptar img, h2, h1, .form-select, .sec2-caja-grande, .fotos-caja-chica {
+.mision-caja-chica, section, main, .index-caja-chica, .adoptar img, h2, h1, .sec2-caja-grande, .fotos-caja-chica {
   justify-content: center;
   align-content: center;
   align-items: center;
@@ -36,33 +36,33 @@ body {
 
 .contenedor-adoptar {
   display: grid;
-  grid-template-columns: 1fr  1fr;
-  grid-template-rows: 65vh    25vh    90vh    18vh;
+  grid-template-columns: 1fr;
+  grid-template-rows: 65vh    25vh    120vh    18vh;
   flex-wrap: wrap;
-  grid-template-areas: "header header" "section    section" "main   main" "footer footer";
+  grid-template-areas: "header" "section" "main" "footer";
 }
 
 .contenedor-transitar {
   display: grid;
-  grid-template-columns: 1fr  1fr;
+  grid-template-columns: 1fr;
   grid-template-rows: 65vh    25vh    90vh    18vh;
-  grid-template-areas: "header header" "section    section" "main   main" "footer footer";
+  grid-template-areas: "header" "section" "main" "footer";
 }
 
 .contenedor-publicar {
   display: grid;
-  grid-template-columns: 1fr  1fr;
-  grid-template-rows: 65vh    25vh    180vh    18vh;
+  grid-template-columns: 1fr;
+  grid-template-rows: 65vh    25vh    200vh    18vh;
   flex-wrap: wrap;
-  grid-template-areas: "header header" "section    section" "main   main" "footer footer";
+  grid-template-areas: "header" "section" "main" "footer";
 }
 
 .contenedor-seccion2 {
   display: grid;
-  grid-template-columns: 1fr  1fr;
+  grid-template-columns: 1fr;
   grid-template-rows: 65vh    25vh    140vh    18vh;
   flex-wrap: wrap;
-  grid-template-areas: "header header" "section    section" "main   main" "footer footer";
+  grid-template-areas: "header" "section" "main" "footer";
 }
 
 .mision-caja-chica {
@@ -223,12 +223,6 @@ h1 {
   font-weight: bolder;
 }
 
-.form-select {
-  height: 2px;
-  width: 250px;
-  line-height: 1,5;
-}
-
 .fotos-caja-grande {
   display: flex;
   flex-direction: row;
@@ -250,131 +244,78 @@ h1 {
 }
 
 .fotos-caja-chica img {
-  height: 320px;
-  width: 290px;
   padding: 5px;
+  height: 370px;
+  width: 330px;
 }
 
 .fotos-caja-chica p {
   padding: 5px;
-  text-align: right;
+  text-align: center;
 }
 
-@media screen and (max-width: 500px) {
-  body {
-    font-size: 11px;
-  }
-  .contenedor-index {
+@media screen and (min-width: 500px) and (max-width: 600px) {
+  .contenedor-mision {
     display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 45vh    15vh   60vh   60vh   20vh;
-    grid-template-areas: "header" "section" "main" "aside" "footer";
-  }
-  header {
-    padding: 0px;
-    background-repeat: repeat-x;
-    background-size: cover !important;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 65vh    25vh    230vh   18vh;
+    grid-template-areas: "header header" "section section" "main aside" "footer footer";
   }
   header img {
-    padding-top: 1px;
-    padding-bottom: 1px;
-    width: 30%;
-    height: 30%;
+    height: 25%;
+    width: 25%;
   }
+}
+
+@media screen and (min-width: 800px) and (max-width: 3000px) {
   header .li-nav {
-    display: list-item;
-    padding: 2px;
-  }
-  .ingresar {
-    justify-content: center;
-    align-content: center;
-    align-items: center;
-    padding-top: 10px;
-    padding-right: 10px;
-    padding-bottom: opx;
-    padding-left: 0px;
-  }
-  section {
-    padding: 5px;
-  }
-  .index-caja-chica {
-    padding-left: 2px;
-    padding-right: 2px;
-    padding-bottom: 10px;
-    font-size: 8px;
-  }
-  .index-caja-chica img {
-    height: 20%;
-    width: 40%;
-    padding: 8px;
-  }
-  .mision-caja-chica {
-    padding: 15px;
-    font-size: 8px;
-    text-size-adjust: initial;
-  }
-  footer {
-    padding: 5px;
+    font-size: 20px;
   }
   .contenedor-mision {
     display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 45vh    10vh    20vh   20vh  22vh;
-    grid-template-areas: "header" "section" "main" "aside" "footer";
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 65vh    20vh    130vh   18vh;
+    grid-template-areas: "header header" "section section" "main aside" "footer footer";
   }
   .contenedor-adoptar {
     display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 65vh    20vh    160vh    18vh;
+    grid-template-areas: "header" "section" "main" "footer";
+  }
+  .contenedor-index {
+    display: grid;
     grid-template-columns: 1fr  1fr;
-    grid-template-rows: 45vh    5vh    80vh    15vh;
-    grid-template-areas: "header header" "section    section" "main   main" "footer footer";
+    grid-template-rows: 65vh    20vh    480vh    18vh;
+    grid-template-areas: "header header" "section    section" "main   aside" "footer footer";
   }
   .contenedor-transitar {
     display: grid;
-    grid-template-columns: 1fr  1fr;
-    grid-template-rows: 45vh    10vh    45vh    15vh;
-    grid-template-areas: "header header" "section    section" "main   main" "footer footer";
+    grid-template-columns: 1fr;
+    grid-template-rows: 65vh    20vh    100vh    18vh;
+    grid-template-areas: "header" "section" "main" "footer";
   }
-  .fotos-caja-grande {
-    display: flex;
-    flex-direction: row;
-    align-content: space-around;
-    align-items: center;
-    padding: 5px;
-    text-align: end;
-    font-size: 8px;
-  }
-  .fotos-caja-grande img {
-    height: 180px;
-    width: 150px;
-    padding: 5px;
-    align-content: space-around;
-  }
-  .fotos-caja-chica p {
-    padding: 5px;
-    text-align: right;
+  .contenedor-publicar {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 65vh    20vh    210vh    18vh;
+    flex-wrap: wrap;
+    grid-template-areas: "header" "section" "main" "footer";
   }
   .contenedor-seccion2 {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 45vh    10vh    180vh    15vh;
+    grid-template-rows: 65vh    20vh    140vh    18vh;
     flex-wrap: wrap;
     grid-template-areas: "header" "section" "main" "footer";
   }
-  .sec2-caja-grande {
-    display: flex;
-    flex-direction: column;
-    align-content: space-around;
-    align-items: center;
-    padding: 5px;
-    text-align: end;
-    font-size: 8px;
+  .fotos-caja-chica img {
+    width: 350px;
+    height: 390px;
   }
-  .contenedor-publicar {
-    display: grid;
-    grid-template-columns: 1fr  1fr;
-    grid-template-rows: 45vh    10vh    90vh    15vh;
-    flex-wrap: wrap;
-    grid-template-areas: "header header" "section    section" "main   main" "footer footer";
+  .sec2-caja-grande {
+    flex-direction: row;
+    justify-content: center;
   }
 }
 
@@ -403,7 +344,7 @@ h1 {
 .contenedor-seccion2 {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 65vh    25vh    290vh    18vh;
+  grid-template-rows: 65vh    25vh    350vh    18vh;
   flex-wrap: wrap;
   grid-template-areas: "header" "section" "main" "footer";
 }
@@ -414,73 +355,145 @@ h1 {
 
 .contenedor-transitar {
   display: grid;
-  grid-template-columns: 1fr  1fr;
+  grid-template-columns: 1fr;
   grid-template-rows: 65vh    20vh    100vh    18vh;
-  grid-template-areas: "header header" "section    section" "main   main" "footer footer";
+  grid-template-areas: "header" "section" "main" "footer";
 }
 
-@media screen and (min-width: 500px) and (max-width: 600px) {
-  .contenedor-mision {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 65vh    25vh    230vh   18vh;
-    grid-template-areas: "header header" "section section" "main aside" "footer footer";
-  }
-  header img {
-    height: 25%;
-    width: 25%;
-  }
-}
-
-@media screen and (min-width: 800px) and (max-width: 3000px) {
-  header .li-nav {
-    font-size: 20px;
-  }
-  .contenedor-mision {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 65vh    20vh    130vh   18vh;
-    grid-template-areas: "header header" "section section" "main aside" "footer footer";
-  }
-  .contenedor-adoptar {
-    display: grid;
-    grid-template-columns: 1fr  1fr;
-    grid-template-rows: 65vh    20vh    150vh    18vh;
-    grid-template-areas: "header header" "section    section" "main   main" "footer footer";
+@media screen and (max-width: 500px) {
+  body {
+    font-size: 30px;
   }
   .contenedor-index {
     display: grid;
-    grid-template-columns: 1fr  1fr;
-    grid-template-rows: 65vh    20vh    430vh    18vh;
-    grid-template-areas: "header header" "section    section" "main   aside" "footer footer";
+    grid-template-columns: 1fr;
+    grid-template-rows: 90vh    50vh   380vh   380vh   22vh;
+    grid-template-areas: "header" "section" "main" "aside" "footer";
+  }
+  header {
+    padding: 0px;
+    background-repeat: repeat-x;
+    background-size: cover !important;
+  }
+  header img {
+    padding-top: 2px;
+    padding-bottom: 2px;
+    width: 23%;
+    height: 23%;
+  }
+  header .li-nav {
+    display: list-item;
+    padding: 3px;
+    font-size: 13px;
+  }
+  .ingresar {
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    padding-top: 10px;
+    padding-right: 10px;
+    padding-bottom: opx;
+    padding-left: 0px;
+  }
+  section {
+    padding: 5px;
+  }
+  .index-caja-chica {
+    padding-left: 2px;
+    padding-right: 2px;
+    padding-bottom: 10px;
+    font-size: 8px;
+  }
+  .index-caja-chica img {
+    height: 14%;
+    width: 79%;
+    padding: 8px;
+  }
+  .mision-caja-chica {
+    padding: 15px;
+    font-size: 22px;
+    text-size-adjust: initial;
+  }
+  footer {
+    padding: 5px;
+  }
+  .contenedor-mision {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 90vh    28vh    120vh   120vh  22vh;
+    grid-template-areas: "header" "section" "main" "aside" "footer";
+  }
+  .contenedor-adoptar {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 90vh    30vh    145vh    22vh;
+    grid-template-areas: "header" "section" "main" "footer";
+  }
+  .adoptar img {
+    height: 60%;
+    width: 80%;
+    padding: 10px;
+    animation-name: animacion1;
+    animation-duration: 5s;
+    animation-iteration-count: infinite;
+    animation-delay: 1s;
+  }
+  @keyframes animacion1 {
+    0% {
+      width: 85%;
+    }
+    50% {
+      width: 90%;
+    }
+    100% {
+      width: 95%;
+    }
   }
   .contenedor-transitar {
     display: grid;
-    grid-template-columns: 1fr  1fr;
-    grid-template-rows: 65vh    20vh    100vh    18vh;
-    grid-template-areas: "header header" "section    section" "main   main" "footer footer";
+    grid-template-columns: 1fr;
+    grid-template-rows: 90vh    35vh    110vh    22vh;
+    grid-template-areas: "header" "section" "main" "footer";
+    font-size: 27px;
   }
-  .contenedor-publicar {
-    display: grid;
-    grid-template-columns: 1fr  1fr;
-    grid-template-rows: 65vh    20vh    170vh    18vh;
-    flex-wrap: wrap;
-    grid-template-areas: "header header" "section    section" "main   main" "footer footer";
+  .fotos-caja-grande {
+    display: flex;
+    flex-direction: row;
+    align-content: space-around;
+    align-items: center;
+    padding: 5px;
+    text-align: end;
+    font-size: 20px;
+    padding: 5px;
+    align-content: space-around;
+  }
+  .fotos-caja-chica p {
+    padding: 5px;
+    text-align: center;
   }
   .contenedor-seccion2 {
     display: grid;
-    grid-template-columns: 1fr  1fr;
-    grid-template-rows: 65vh    20vh    130vh    18vh;
+    grid-template-columns: 1fr;
+    grid-template-rows: 90vh    30vh    350vh    22vh;
     flex-wrap: wrap;
-    grid-template-areas: "header header" "section    section" "main   main" "footer footer";
-  }
-  .fotos-caja-chica img {
-    width: 200px;
-    height: 250px;
+    grid-template-areas: "header" "section" "main" "footer";
   }
   .sec2-caja-grande {
-    flex-direction: row;
-    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    align-content: space-around;
+    align-items: center;
+    padding: 5px;
+    text-align: center;
+    font-size: 20px;
+  }
+  .contenedor-publicar {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 90vh    35vh    195vh    22vh;
+    flex-wrap: wrap;
+    grid-template-areas: "header" "section " "main" "footer";
+    font-size: 27px;
   }
 }
 /*# sourceMappingURL=style.css.map */
